<resources>
    <string name="app_name">Cs360App</string>
    <string name="login">Log In</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="create_account">Create an Account</string>
    <string name="add_title">Add new weight</string>
    <string name="delete">Delete</string>
    <string name="add_weight">Add Weight</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="back_to_login">Back to Login</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>

    <string name="title">Weight Tracker</string>
    <string name="update_title">Update Weight</string>
    <string name="weight">Weight:</string>
    <string name="date">Date:</string>
    <string name="database">Database</string>
    
    <string name="edit_account">Edit Account</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

</resources>